{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 355,
  "lineage": "6487aa6b-8025-403a-6c92-1efd81069e97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:internet-gateway/igw-0a8ed97ef1f28843f",
            "id": "igw-0a8ed97ef1f28843f",
            "owner_id": "650687157167",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:network-acl/acl-0fafcc806f0a81bab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 40,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 20,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 2049,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10,
                "to_port": 2051
              }
            ],
            "id": "acl-0fafcc806f0a81bab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 30,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 2456,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "udp",
                "rule_no": 10,
                "to_port": 2458
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 40,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 2049,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 20,
                "to_port": 2051
              }
            ],
            "owner_id": "650687157167",
            "subnet_ids": [
              "subnet-05922c79088702567"
            ],
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Subnet",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:route-table/rtb-073b29d561f1b5cf2",
            "id": "rtb-073b29d561f1b5cf2",
            "owner_id": "650687157167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8ed97ef1f28843f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab68a45cc15d4fe8",
            "route_table_id": "rtb-073b29d561f1b5cf2",
            "subnet_id": "subnet-05922c79088702567"
          },
          "dependencies": [
            "aws_internet_gateway.Internet",
            "aws_route_table.Routing",
            "aws_subnet.Subnet",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:security-group/sg-08dbcfec8b66c061e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d84a6c8872ba8a4"
                ],
                "self": false,
                "to_port": 2051
              }
            ],
            "id": "sg-08dbcfec8b66c061e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2456,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2458
              }
            ],
            "name": "cluster",
            "name_prefix": "",
            "owner_id": "650687157167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:security-group/sg-02d84a6c8872ba8a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2051
              }
            ],
            "id": "sg-02d84a6c8872ba8a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08dbcfec8b66c061e"
                ],
                "self": true,
                "to_port": 2051
              }
            ],
            "name": "storage",
            "name_prefix": "",
            "owner_id": "650687157167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AnywhereToClusterValheim",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 2456,
            "id": "sgrule-696848469",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 2458,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Cluster",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ClusterToStorageEfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4177123264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": "sg-02d84a6c8872ba8a4",
            "to_port": 2051,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Cluster",
            "aws_security_group.Storage"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ClusterValheimToAnywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1037945849",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Cluster",
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "StorageFromClusterEfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-86974397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d84a6c8872ba8a4",
            "self": false,
            "source_security_group_id": "sg-08dbcfec8b66c061e",
            "to_port": 2051,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Cluster",
            "aws_security_group.Storage"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "StorageFromStorageEfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2863963063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d84a6c8872ba8a4",
            "self": false,
            "source_security_group_id": "sg-02d84a6c8872ba8a4",
            "to_port": 2051,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Storage"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "StorageToStorageEfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2695765978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d84a6c8872ba8a4",
            "self": false,
            "source_security_group_id": "sg-02d84a6c8872ba8a4",
            "to_port": 2051,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Storage"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:subnet/subnet-05922c79088702567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05922c79088702567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650687157167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "dependencies": [
            "aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:vpc/vpc-04c3dbe536984e9ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0f46187d08d19b512",
            "default_route_table_id": "rtb-0432e56aa0586f459",
            "default_security_group_id": "sg-03108ba39bdf06599",
            "dhcp_options_id": "dopt-6124da09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c3dbe536984e9ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0432e56aa0586f459",
            "owner_id": "650687157167",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            }
          }
        }
      ]
    }
  ]
}